[gd_scene load_steps=21 format=2]

[ext_resource path="res://src/Game/Interface/Interface.gd" type="Script" id=1]
[ext_resource path="res://assets/screens/end_of_game_screen.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/tres/shojumaru_24.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/screens/gameover_screen.png" type="Texture" id=4]
[ext_resource path="res://src/Buttons/DevelopersButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/screens/buttons/play_again/play_again_btn_hover.png" type="Texture" id=6]
[ext_resource path="res://assets/screens/buttons/play_again/play_again_btn_pressed.png" type="Texture" id=7]
[ext_resource path="res://assets/screens/buttons/play_again/play_again_btn.png" type="Texture" id=8]
[ext_resource path="res://assets/screens/buttons/try_again/try_again_btn.png" type="Texture" id=9]
[ext_resource path="res://assets/screens/buttons/try_again/try_again_btn_pressed.png" type="Texture" id=10]
[ext_resource path="res://assets/screens/buttons/try_again/try_again_btn_hover.png" type="Texture" id=11]
[ext_resource path="res://assets/screens/buttons/next_level/next_level_btn_pressed.png" type="Texture" id=12]
[ext_resource path="res://assets/screens/buttons/next_level/next_level_btn_hover.png" type="Texture" id=13]
[ext_resource path="res://assets/screens/buttons/next_level/next_level_btn.png" type="Texture" id=14]
[ext_resource path="res://src/DevelopersScreen/DevelopersScreen.tscn" type="PackedScene" id=15]
[ext_resource path="res://src/Buttons/TextureButton.tscn" type="PackedScene" id=16]
[ext_resource path="res://src/Game/Interface/GameOverScreen.gd" type="Script" id=17]
[ext_resource path="res://src/Buttons/SoundButton/SoundButton.tscn" type="PackedScene" id=18]
[ext_resource path="res://assets/fonts/data/Shojumaru-Regular.ttf" type="DynamicFontData" id=19]

[sub_resource type="DynamicFont" id=1]
size = 35
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 19 )

[node name="Interface" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HUD" type="MarginContainer" parent="Control"]
margin_right = 40.0
margin_bottom = 40.0
custom_constants/margin_right = 40
custom_constants/margin_top = 40
custom_constants/margin_left = 40
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control/HUD"]
margin_left = 40.0
margin_top = 40.0
margin_right = 361.0
margin_bottom = 164.0

[node name="TreesLeft" type="Label" parent="Control/HUD/VBoxContainer"]
margin_right = 321.0
margin_bottom = 33.0
custom_fonts/font = ExtResource( 3 )
text = "Pozostało drzew: 5"

[node name="SoundButton" parent="Control/HUD/VBoxContainer" instance=ExtResource( 18 )]
margin_top = 37.0
margin_right = 50.0
margin_bottom = 87.0
rect_min_size = Vector2( 50, 50 )
size_flags_horizontal = 0

[node name="GameOverScreen" type="Control" parent="Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Control/GameOverScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReplayBtn" parent="Control/GameOverScreen" instance=ExtResource( 16 )]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -241.0
margin_top = -157.0
margin_right = 241.0
margin_bottom = 0.0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 11 )

[node name="Quote" type="Label" parent="Control/GameOverScreen"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = 100.551
margin_bottom = 169.551
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "„Each morning we are born again. What we do today is what matter most”."
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Author" type="Label" parent="Control/GameOverScreen"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -122.774
margin_top = 158.707
margin_right = -122.774
margin_bottom = 227.707
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "– Buddha"
align = 2
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelWonScreen" type="Control" parent="Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Control/LevelWonScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )

[node name="NextLevelBtn" parent="Control/LevelWonScreen" instance=ExtResource( 16 )]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -241.0
margin_top = -153.0
margin_right = 241.0
margin_bottom = 0.0
texture_normal = ExtResource( 14 )
texture_pressed = ExtResource( 12 )
texture_hover = ExtResource( 13 )

[node name="MarginContainer" type="MarginContainer" parent="Control/LevelWonScreen"]
anchor_right = 1.0
margin_bottom = 31.0
custom_constants/margin_top = 40
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/LevelWonScreen/MarginContainer"]
margin_top = 40.0
margin_right = 1280.0
margin_bottom = 109.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 2
text = "Przepędziłeś drwali!
Teraz biegnij ratować kolejny las..."
align = 1

[node name="EndOfGameScreen" type="Control" parent="Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Control/EndOfGameScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )

[node name="MarginContainer2" type="MarginContainer" parent="Control/EndOfGameScreen"]
anchor_right = 1.0
margin_bottom = 145.0
custom_constants/margin_top = 40
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/EndOfGameScreen/MarginContainer2"]
margin_top = 40.0
margin_right = 1280.0
margin_bottom = 145.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 2
text = "Udało się! 
Drwale nie zagrażają już twojemu gatunkowi. 
Odbudowałeś populację Myszojeleni i rodzinny las!"
align = 1

[node name="DevelopersButton" parent="Control/EndOfGameScreen" instance=ExtResource( 5 )]
margin_left = 53.2774
margin_top = 530.772
margin_right = 357.277
margin_bottom = 697.772

[node name="ResetGameBtn" parent="Control/EndOfGameScreen" instance=ExtResource( 16 )]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 140.827
margin_top = -157.911
margin_right = 622.827
margin_bottom = -4.91089
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 6 )

[node name="Poll_link" parent="Control/EndOfGameScreen" instance=ExtResource( 16 )]
margin_left = 794.563
margin_top = 514.814
margin_right = 1210.56
margin_bottom = 561.814
texture_normal = null
texture_pressed = null
texture_hover = null
upscale_on_hover = true
downscale_on_press = true

[node name="Label" type="Label" parent="Control/EndOfGameScreen/Poll_link"]
anchor_top = 3.507
anchor_bottom = 3.507
margin_left = 8.98987
margin_top = -166.327
margin_right = 424.99
margin_bottom = -119.327
size_flags_horizontal = 2
size_flags_vertical = 2
custom_fonts/font = SubResource( 1 )
text = "->Link do ankiety<-"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DevelopersScreen" parent="." instance=ExtResource( 15 )]
visible = false
[connection signal="pressed" from="Control/GameOverScreen/ReplayBtn" to="." method="_on_ReplayBtn_pressed"]
[connection signal="pressed" from="Control/LevelWonScreen/NextLevelBtn" to="." method="_on_NextLevelBtn_pressed"]
[connection signal="pressed" from="Control/EndOfGameScreen/DevelopersButton" to="." method="_on_DevelopersButton_pressed"]
[connection signal="pressed" from="Control/EndOfGameScreen/ResetGameBtn" to="." method="_on_ResetGameBtn_pressed"]
